--- a/WebContent/CH9/File.html
+++ b/WebContent/CH9/File.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  
-<h2>檔案上傳 - 歐萊禮</h2>
+<h2>檔案上傳</h2>
 <form name="Form1" enctype="multipart/form-data" method="post" action="File.jsp">
   <p> 上傳檔案 1： 
     <input type="file" name="File1" size="20" maxlength="20">
