--- a/WebContent/CH10/Login.html
+++ b/WebContent/CH10/Login.html
@@ -1,18 +1,22 @@
 <html>
 <head>
-  <title>CH10 - Login.html</title>
+<title>CH10 - Login.html</title>
 <meta http-equiv="Content-Type" content="text/html; charset=big5">
 </head>
 <body>
- 
-<h2>登入系統</h2>
 
-<form method="POST" action="UserList.jsp">  
+	<h2>登入系統</h2>
 
-<p>請輸入使用者ID：<input type="text" name="user_id"></p>  
-<p><input type="submit" value="登入"></p>
+	<form method="POST" action="UserList.jsp">
 
-</form>
+		<p>
+			請輸入使用者ID：<input type="text" name="user_id">
+		</p>
+		<p>
+			<input type="submit" value="登入">
+		</p>
+
+	</form>
 
 </body>
 </html>
